--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -1,12 +1,48 @@
+body * {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
+}
+
+.layout {
     display:grid;
     min-height: 100vh;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 30fr;
     border: solid 5px red;
 }
 
 nav, main {
     border: solid 1px black;
-    height: 100%;
+    padding:  20px;
 }
+
+.feature, .project-list, .project {
+    border: solid 1px black;
+}
+
+.feature {
+    min-height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.project-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+    /* padding: 20px; */
+    margin-top: 20px;
+}
+
+div.project {
+    min-height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
